# CodeLoom

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/codeloom/: __init__.py  __main__.py  config.py  core.py  utils.py
tests/: test_core.py
